# TeamNameDelete_GUI

./: CMakeLists.txt  README.md  drivemanager.cpp  drivemanager.h  main.cpp  pdfgenerator.cpp  pdfgenerator.h  qml.qrc
qml/: CertificatesPage.qml  DriveSelectionPage.qml  WipeProgressPage.qml
